<resources>
    <string name="app_name">Trackside</string>
    <string name="LIVE">Live Race</string>
    <string name="home">Home</string>
    <string name="teams">Teams</string>
    <string name="Driver">Driver Info</string>
    <string name="liveRace">LIVE RACE</string>
    <string name="event_title">FIA Formula E Marrakech ePrix</string>
    <string name="timing">R2 | 12 nov,16 10:15 AM CET</string>
    <string name="city">Morocco</string>
    <string name="country">MARRAKECH</string>
    <string name="Km">2.97 KM</string>
    <string name="Watch_live">WATCH LIVE</string>
    <string name="turns">16 TURNS</string>
    <string name="ranking">#1</string>
    <string name="replay">Replay Lap 11</string>
    <string name="live">Live</string>
    <string name="lap">Lap</string>
    <string name="lap_no.">11/33</string>
    <string name="liveDriver">Driver Live</string>
    <string name="driverName">Sebastien Buemi</string>
    <string name="trackMap">EVENT TRACK MAP</string>
    <string name="rewind">Rewind Laps </string>
    <string name="raceInfo">Race Information</string>
    <string name="records">Records</string>
    <string name="loc">Location</string>
    <string name="length">Length</string>
    <string name="TURNS">TURNS</string>
    <string name="lastWin">Last Winner</string>
    <string name="QualRec">Qualifying Record</string>
    <string name="LapRec">Lap Record</string>
    <string name="LaswinName">Sebestien Buemi</string>
    <string name="QualRecName">1:03.099-Nelson Piquet Jr</string>
    <string name="LapRecName">1:02.947-Felix Rosenqvist</string>
    <string name="driver_detail">Driver Info</string>
    <string-array name="best">
        <item>1:04.957</item>
    </string-array>
    <string-array name="worst">
        <item>1:09.957</item>
    </string-array>
</resources>
