<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B818C">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nameplate"
                    android:text="@string/event_title"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold|normal"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/trackMap"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold|normal"
                    android:textSize="18dp"/>
                <com.flaviofaria.kenburnsview.KenBurnsView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:src="@drawable/trackmap"
                    android:id="@+id/TrackMapImage"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/map_tilted"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:text="@string/raceInfo"
                        android:drawableLeft="@drawable/ic_access_time_white_24dp"
                        android:textColor="@android:color/white"
                        android:drawablePadding="5dp"
                        android:textStyle="bold|italic"
                        android:textSize="18dp"
                        />
                </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/loc"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:textStyle="italic|normal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:id="@+id/race_city"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:textStyle="bold|normal"/>

            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="italic|normal"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/Km"
                        android:id="@+id/race_length"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="bold|normal"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/TURNS"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="italic|normal"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/turns"
                        android:id="@+id/race_turns"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="bold|normal"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/map_tilted"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:text="@string/records"
                        android:textStyle="bold|italic"
                        android:drawableLeft="@drawable/trophy"
                        android:textColor="@android:color/white"
                        android:drawablePadding="5dp"
                        android:textSize="18dp"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/lastWin"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="italic|normal"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/LaswinName"
                        android:id="@+id/last_winner_name"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="bold|normal"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/QualRec"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="italic|normal"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/QualRecName"
                        android:id="@+id/Qualifying_Record_name"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="bold|normal"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/LapRec"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="italic|normal"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/LapRecName"
                        android:id="@+id/lap_record_name"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textStyle="bold|normal"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    />



            </LinearLayout>


        </ScrollView>
</LinearLayout>