<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4F5D75"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/HOME"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textColor="@android:color/white"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawablePadding="15dp"
                android:elevation="5dp"
                android:text="@string/home"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_home_red_24dp"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:onClick="HOME"/>
            <TextView
                android:id="@+id/live_race"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textColor="@android:color/white"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawablePadding="15dp"
                android:elevation="5dp"
                android:text="@string/LIVE"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_action_live_dot"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:onClick="LIVE_RACE"/>

            <TextView
                android:id="@+id/driver"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:drawablePadding="15dp"
                android:elevation="5dp"
                android:drawableLeft="@drawable/ic_helmet"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:textColor="@android:color/white"
                android:onClick="DRIVER"
                android:text="@string/Driver"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>